# hyperplonk

./: Cargo.toml  README.md  rust-toolchain
benches/clone/: main.rs
benches/hyperplonk/: main.rs
src/: builder.rs  challenges.rs  commitment.rs  function_sumcheck.rs  gates.rs  hyperplonk.rs  interactive_sumcheck.rs  lib.rs  misc.rs  permutation.rs  polynomials.rs  sumcheck.rs
