[package]
name = "hyperplonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.3"
ark-poly = "0.3"
take_mut = "0.2"
rand = "0.8"
ark-pallas = "0.3"
bit-vec = "0.6"
blake3 = "1.3"
ark-poly-commit = "0.3"
ark-bls12-381 = "0.3"
ark-ec = "0.3"
rayon = "1.6"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "clone"
harness = false

[[bench]]
name = "hyperplonk"
harness = false